testdata/corset/invalid/alias_invalid_04.lisp
;;error:3:14-16:unknown symbol
(defpurefun (id x) x)
(defalias fn id)
